[gd_scene load_steps=6 format=3 uid="uid://b6gy1upl6rgeh"]

[ext_resource type="Script" uid="uid://bpl65cscpfsxq" path="res://Scripts/TitleScreenUI.gd" id="1_8ggh5"]
[ext_resource type="FontFile" uid="uid://b0wy3dncaupb" path="res://Art/GamiliaPixel-Regular-BF6652b145dc491.otf" id="1_mncdm"]
[ext_resource type="Texture2D" uid="uid://cm52r530p3cf4" path="res://Art/menu_button_default.png" id="2_kxt6l"]
[ext_resource type="FontFile" uid="uid://rbq7vln3ekon" path="res://Art/Minecraft_font.ttf" id="3_jbpma"]
[ext_resource type="Texture2D" uid="uid://cgncf43a8qbwi" path="res://Art/menu_button_hover.png" id="4_8ggh5"]

[node name="TitleScreenUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_8ggh5")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 75

[node name="TitleCard" type="RichTextLabel" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(752, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_mncdm")
theme_override_font_sizes/normal_font_size = 250
text = "PONG"
scroll_active = false

[node name="ButtonsVbox" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Button1" type="TextureButton" parent="MarginContainer/VBoxContainer2/ButtonsVbox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_kxt6l")
texture_hover = ExtResource("4_8ggh5")

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/ButtonsVbox/Button1"]
custom_minimum_size = Vector2(186, 67)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -33.5
offset_right = 93.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_jbpma")
theme_override_font_sizes/normal_font_size = 75
text = "Easy"
scroll_active = false

[node name="Button2" type="TextureButton" parent="MarginContainer/VBoxContainer2/ButtonsVbox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_kxt6l")
texture_hover = ExtResource("4_8ggh5")

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/ButtonsVbox/Button2"]
custom_minimum_size = Vector2(186, 67)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.5
offset_top = -33.5
offset_right = 131.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_jbpma")
theme_override_font_sizes/normal_font_size = 75
text = "Medium"
scroll_active = false

[node name="Button3" type="TextureButton" parent="MarginContainer/VBoxContainer2/ButtonsVbox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_kxt6l")
texture_hover = ExtResource("4_8ggh5")

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/ButtonsVbox/Button3"]
custom_minimum_size = Vector2(186, 67)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -33.5
offset_right = 93.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_jbpma")
theme_override_font_sizes/normal_font_size = 75
text = "Hard"
scroll_active = false

[node name="Button4" type="TextureButton" parent="MarginContainer/VBoxContainer2/ButtonsVbox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
texture_normal = ExtResource("2_kxt6l")
texture_hover = ExtResource("4_8ggh5")

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/ButtonsVbox/Button4"]
custom_minimum_size = Vector2(314.54, 67)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.27
offset_top = -33.5
offset_right = 157.27
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_jbpma")
theme_override_font_sizes/normal_font_size = 75
text = "Practice"
scroll_active = false

[node name="ModeDesc" type="RichTextLabel" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_fonts/normal_font = ExtResource("3_jbpma")
theme_override_font_sizes/normal_font_size = 50
horizontal_alignment = 1
vertical_alignment = 1
